Friends!
-Implemented a friends system, accessed via the /friend command.
-Friend requests are synced across servers in real time
-Players can now choose between allowing all messages, or allowing messages only from friends, with /togglemsg
-Added /block and /unblock commands to block communications to and from a player.